# ECE-450-FPGA-Design

KhanhTran_Lab1/: compile_commands.json  compute_c.cpp  hls_config.cfg  tb_compute.cpp  vitis-comp.json
KhanhTran_Lab1/KhanhTran_Lab1/: KhanhTran_Lab1.hlscompile_summary  KhanhTran_Lab1.hlsrun_cosim_summary  KhanhTran_Lab1.hlsrun_csim_summary  vitis-comp.json
KhanhTran_Lab1/VivadoRTL/: VivadoRTL.xpr
KhanhTran_Lab2/: compile_commands.json  fir16.cpp  fir16.h  fir16_unroll16.cpp  fir_16_unroll4.cpp  hls_config.cfg  tb_fir16_optimized.cpp  vitis-comp.json
KhanhTran_Lab2/KhanhTran_Lab2/: KhanhTran_Lab2.hlscompile_summary  KhanhTran_Lab2.hlsrun_cosim_summary  KhanhTran_Lab2.hlsrun_csim_summary  KhanhTran_Lab2.hlsrun_package_summary  vitis-comp.json
KhanhTran_Lab2/Lab2/: Lab2.xpr
KhanhTran_Lab2/_ide/: launch.json
KhanhTran_Lab3/: compile_commands.json  hls_config.cfg  sobel.cpp  sobel_testbench.cpp  vitis-comp.json
KhanhTran_Lab3/KhanhTran_Lab3/: vitis-comp.json  (+3 more)
KhanhTran_Lab3/KhanhTran_Lab3/hls/impl/misc/drivers/sobel_rgb_axis_v1_0/src/: CMakeLists.txt  Makefile  xsobel_rgb_axis.c  xsobel_rgb_axis.h  xsobel_rgb_axis_linux.c  xsobel_rgb_axis_sinit.c
KhanhTran_Lab4/: compile_commands.json  hls_config.cfg  main.cpp  main_testbench.cpp  maxmul.h  vitis-comp.json
_ide/: .peers.ini  settings.json  version.ini  workspace_journal.py  workspace_journal_21160.py  workspace_journal_37360.py  workspace_journal_38752.py  workspace_journal_42708.py  workspace_journal_8260.py
lab0/: Mux_2to1.cpp  Tb_mux.cpp  compile_commands.json  hls_config.cfg  vitis-comp.json
(+1265 files in other folders)
